# carpart-scraper

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  PRODUCTION_UPDATE_STRATEGY.md  PROJECT_PLAN.md  README.md  RECONNAISSANCE.md  SCRAPING_STRATEGY.md  WORKFLOW.md  config.example.yaml  enrich_details.py  merge_for_import.py  pyproject.toml  pytest.ini  run_scrape.py  scrape_catalog.py  test-sitemap.php  test_hierarchy.py
.claude/: CLAUDE.md
.ddev/: GIT_TRACKING.md  README.md  config.yaml
.github/workflows/: backfill-images.yml  ci.yml  scrape.yml
admin/js/: admin-scripts.js
blocks/: webpack.config.js
blocks/vehicle-selector/: block.json  render.php
blocks/vehicle-selector/src/: edit.js  index.js
carpart-scraper-wp/: .gitignore  .pa11yci.json  ENHANCEMENT_SUMMARY.md  README.md  composer.json  csf-parts-catalog.php  package.json  playwright.config.js  webpack.config.js
carpart-scraper-wp/admin/: class-csf-parts-admin-menu.php  class-csf-parts-import-manager.php
carpart-scraper-wp/admin/css/: admin-styles.css
carpart-scraper-wp/admin/js/: admin-scripts.js
carpart-scraper-wp/admin/views/: import-log-page.php  import-page.php  parts-list-page.php  settings-page.php
carpart-scraper-wp/blocks/: package-lock.json  package.json  webpack.config.js
carpart-scraper-wp/blocks/product-catalog/: block.json  filters.js  pagination.js  render.php  view.js
carpart-scraper-wp/blocks/product-catalog/src/: edit.js  index.js
carpart-scraper-wp/blocks/single-product/: block.json  render.php
carpart-scraper-wp/blocks/single-product/src/: edit.js  index.js  variations.js
carpart-scraper-wp/includes/: class-csf-parts-ajax-handler.php  class-csf-parts-assets.php  class-csf-parts-auto-import.php  class-csf-parts-block-manager.php  class-csf-parts-cli.php  class-csf-parts-constants.php  class-csf-parts-customizer.php  class-csf-parts-database.php  class-csf-parts-detail-fetcher.php  class-csf-parts-json-importer.php  class-csf-parts-plugin.php  class-csf-parts-post-types.php  class-csf-parts-rest-api.php  class-csf-parts-shortcodes.php  class-csf-parts-sitemap-provider.php  class-csf-parts-taxonomies.php  class-csf-parts-url-handler.php  helpers.php
carpart-scraper-wp/includes/import-sources/: class-directory-import-source.php  class-import-source-factory.php  class-url-import-source.php  interface-import-source-strategy.php
carpart-scraper-wp/public/css/: csf-color-system.css  frontend-styles.css  part-single-modern.css  product-catalog-block.css
carpart-scraper-wp/public/js/: engine-selector.js  search-async.js
carpart-scraper-wp/scripts/: inspect-customizer.js  update-kadence-colors.js  update-kadence-via-cli.sh
carpart-scraper-wp/templates/: part-single-modern.php  part-single.php
carpart-scraper-wp/test-data/: README.md  sample-import.json  validate-import.php
carpart-scraper-wp/tests/: .phpunit.result.cache  TESTING.md  bootstrap.php  phpunit.xml
carpart-scraper-wp/tests/archived-v1/: README.md  TaxonomiesTest.php
carpart-scraper-wp/tests/e2e/: color-system.spec.js  debug-all-categories.spec.ts  debug-all-categories2.spec.ts  debug-categories.spec.ts  debug-category-counts.spec.ts  debug-condenser-types.spec.ts  debug-condensers.spec.ts  debug-inverter.spec.ts  debug-missing-cats.spec.ts  debug-oil-coolers.spec.ts  debug-total-count.spec.ts  debug-uncategorized.spec.ts  engine-selector-debug.spec.ts  screenshot-cards.spec.ts  setup-kadence-colors.spec.js  v124-fixes.spec.ts
carpart-scraper-wp/tests/unit/: ConstantsTest.php  DatabaseTest.php  ImportSourceFactoryTest.php  ImportSourceStrategyTest.php  RESTAPITest.php  URLHandlerTest.php
docs/: PERFORMANCE.md
includes/: class-csf-parts-blocks.php
src/cli/: __init__.py  config.py  main.py  progress.py  validators.py
src/cli/commands/: __init__.py  backfill_images.py  export.py  scrape.py  stats.py  sync_images.py  test_endpoint.py  validate.py
src/exporters/: json_exporter.py
src/models/: part.py  validators.py  vehicle.py
src/scraper/: ajax_parser.py  etag_store.py  fetcher.py  hierarchy_cache.py  image_processor.py  image_syncer.py  orchestrator.py  parser.py  protocols.py  state_syncer.py  validator.py
src/utils/: stats_analyzer.py
test-data/: sample-import.json
tests/: conftest.py
tests/e2e/: color-system.spec.ts
tests/integration/: test_workflows.py
tests/performance/: __init__.py  test_benchmarks.py  test_memory_profiling.py
tests/unit/: test_config.py  test_etag_store.py  test_exporters.py  test_fetcher.py  test_fixtures_example.py  test_hierarchy_cache.py  test_image_processor.py  test_image_syncer.py  test_models.py  test_orchestrator.py  test_parser.py  test_parsers.py  test_state_syncer.py  test_validator.py
tests/unit/cli/: __init__.py  test_config.py  test_export_command.py  test_main.py  test_progress.py  test_scrape_command.py  test_stats_command.py  test_test_endpoint_command.py  test_validate_command.py
